--- a/OrangeBricks.Web/Views/Property/MyProperties.cshtml
+++ b/OrangeBricks.Web/Views/Property/MyProperties.cshtml
@@ -17,7 +17,8 @@
     <p>@property.Description</p>
 
     <a href="@Url.Action("OnProperty", "Offers", new {id = property.Id})">View offers that have been made on this property...</a>
-        
+    @*<a href="@Url.Action("OnBooking", "BookAppointment", new {id = property.Id})">View Booking appointments made on this property...</a>*@
+
     if (!property.IsListedForSale)
     {
         using (Html.BeginForm("ListForSale", "Property"))
